--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/kajahno/iai#readme",
   "devDependencies": {
-    "gulp-cli": "^1.2.2"
+    "browser-sync": "^2.18.6",
+    "gulp-clean-css": "^2.3.2",
+    "gulp-cli": "^1.2.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-uglify": "^2.0.0"
   }
 }
